# obsidian-brain

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-25-obsidian-brain-phase1.md  2026-04-01-experience-notes-redesign.md  2026-04-09-daily-note-restructure.md
docs/superpowers/specs/: 2026-03-25-obsidian-brain-design.md  2026-04-01-experience-notes-redesign.md  2026-04-09-daily-note-restructure-design.md
scripts/: install-hooks.sh  migrate-docs.sh  reverse_recent_work.py
src/obsidian_brain/: __main__.py  analyzer.py  claude_api.py  config.py  digest.py  filter.py  generator.py  lockfile.py  migrate.py  parser.py  pipeline.py  project_mapper.py  recovery.py  similarity.py  vault.py
templates/: dashboard.md  obsidian-brain.css
tests/: test_analyzer.py  test_claude_api.py  test_cli.py  test_config.py  test_digest.py  test_filter.py  test_generator.py  test_integration.py  test_lockfile.py  test_migrate.py  test_parser.py  test_pipeline.py  test_project_mapper.py  test_recovery.py  test_sanitize_and_rotate.py  test_vault.py
tests/fixtures/: sample_transcript.jsonl
tests/fixtures/sample_vault/.obsidian-brain/: .processed  config.yaml
tests/fixtures/sample_vault/Concepts/: Docker.md
tests/fixtures/sample_vault/Projects/: pomodoro-todo.md  theta-todo.md
