[project]
name = "obsidian-brain"
version = "0.1.0"
description = "Auto-generate Obsidian documents from AI conversations"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
